tests/negative/test_lenof_invalid_type.orb
fnc main () () {
    sym x:(i32 *);
    lenOf x;
}; 